--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -28,7 +28,7 @@
 
 
 Comments can be included in input files. Comments are surrounded by
-{\tt (*} and {\tt *)}. Nested comments are not supported.
+{\tt (*} and {\tt *)}. Nested comments are supported.
 
 Identifiers ($\nonterm{ident}$) begin with a letter (uppercase or lowercase) and contain
 any number of letters, digits, the underscore character (\_),
