Allow assignments (let x = M in, x <- M;) in queries, equation and collision statements.
Merge of branch 2021.23.let_in_eq

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ of the cryptographic protocol verifier.
 
 Version
 
+- Allow assignments ("let x = M in", "x <- M;") in queries, equation and
+  collision statements.
 - Allow nested comments in the input file. All comments must be closed.
   CryptoVerif will raise an error otherwise.
 
